Bug 93293 - Crash when closing Writer after placing the cursor in the sidebar styles combobox
Summary: Crash when closing Writer after placing the cursor in the sidebar styles comb...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, regression
: 93311 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-09 09:08 UTC by Maxim Monastirsky
Modified: 2016-10-25 19:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2015-08-09 09:08:55 UTC
To reproduce:

1. Open Writer
2. Show the sidebar
3. Click inside the styles combobox
4. Close Writer -> crash.

My system is Fedora 22 64-bit. This affects only master, not 5.0.
Comment 1 tommy27 2015-08-13 15:00:13 UTC
reproducible on Win8.1 x64 too.

LibO 5.1.0.0.alpha1+
Build ID: 7d3fa6bae9f7a755eb2d0ca24bf1afd5f3646bb7
TinderBox: Win-x86@39, Branch:master, Time: 2015-08-09_08:38:08
Locale: it-IT (it_IT)
Comment 2 Michael Weghorn 2015-08-14 20:44:45 UTC
bibisect result (using the lo-linux-dbgutil bibisect repository):
 35bc5c32966013e55bcf4227748c318bccb0819b is the first bad commit
commit 35bc5c32966013e55bcf4227748c318bccb0819b
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Sat Jul 11 05:40:12 2015 +0200

    2015-07-11: source-hash-dad6be8af0e670a56d3d399a1b0a35859bd7b093

:100644 100644 fe3c7255a00a7245e7bf3fc18082074d1f1388eb 7e4d2028dbce188f0b4c0b7db3d71b91aa2714ec M	build-info.txt
:040000 040000 c4824dafb047936ab96ebf4371ac7e2584565e6d a1381911ec8b236771841d4eb97f543ecd40c650 M	opt

---

$ git bisect log
# bad: [05978e67ddc322278d3ff3cbd91f1c93b3bc2bdf] 2015-08-14: source-hash-6eede78d4e75fdbec7e565ebb15f1ce9956734f0
# good: [2b392af9c8f54629e3a3a98a8c92fa5af1c6722f] 2015-05-20: source-hash-90e2dabb8d0bb5382234be776c2ad0e2d5d9e224
git bisect start '05978e67ddc322278d3ff3cbd91f1c93b3bc2bdf' '2b392af9c8f54629e3a3a98a8c92fa5af1c6722f'
# good: [cb936e89eced2812e683a84f67099ff12eb97245] 2015-07-02: source-hash-c18f11587d37f285a95447dd8996c8b605732e00
git bisect good cb936e89eced2812e683a84f67099ff12eb97245
# bad: [1cd3607857e7065cfb54d4ea5ca08c78c0ab83d8] 2015-07-23: source-hash-e92a8b92072284fd7c37d7bb3e1e8fe72a185f35
git bisect bad 1cd3607857e7065cfb54d4ea5ca08c78c0ab83d8
# bad: [4f7130ee14b72f9507b772f00068535ef308d551] 2015-07-12: source-hash-28d410e14d4eec5b9960f78d21bc98a80d557807
git bisect bad 4f7130ee14b72f9507b772f00068535ef308d551
# good: [136b8f86a09839b55e7c25e4cf82e439c496f3ce] 2015-07-07: source-hash-0251e61640b94094918406b33ee7b05564409feb
git bisect good 136b8f86a09839b55e7c25e4cf82e439c496f3ce
# good: [02f749eef951ff74ff6184cd0c5c13cc6e97f915] 2015-07-09: source-hash-85ce6a2446deb0f4c01604b6188f969603de9b16
git bisect good 02f749eef951ff74ff6184cd0c5c13cc6e97f915
# bad: [35bc5c32966013e55bcf4227748c318bccb0819b] 2015-07-11: source-hash-dad6be8af0e670a56d3d399a1b0a35859bd7b093
git bisect bad 35bc5c32966013e55bcf4227748c318bccb0819b
# good: [1b45cefc5217a763278907368a3f27d761e2e1ff] 2015-07-10: source-hash-83b53164b096b4cba94a2e1ee8b620228bee8a3a
git bisect good 1b45cefc5217a763278907368a3f27d761e2e1ff
# first bad commit: [35bc5c32966013e55bcf4227748c318bccb0819b] 2015-07-11: source-hash-dad6be8af0e670a56d3d399a1b0a35859bd7b093
Comment 3 Maxim Monastirsky 2015-08-19 15:01:59 UTC
*** Bug 93311 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2015-08-19 15:13:46 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=086fe6f1e87c575ad5480c4ee9676aa2af6d489d

tdf#93293 Fix inverted condition

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Robinson Tryon (qubit) 2015-12-17 10:30:40 UTC Comment hidden (obsolete)