tdf#93293 Fix inverted condition

Regression of ece8699f8f22f6bae137c601bc29b83b75dc3bf3

Change-Id: I1aac18dcb469b30de625c5cbfb5b0dd27fe33364